// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ClayRadio should generate a checked radio 1`] = `
<div class="form-check">
  <label class="custom-control custom-radio">
    <input checked="" class="custom-control-input" ref="input" type="radio">
    <span class="custom-control-indicator"></span>
    <span class="custom-control-description">My Radio</span>
  </label>
</div>
`;

exports[`ClayRadio should generate a disabled radio 1`] = `
<div class="form-check">
  <label class="custom-control custom-radio">
    <input disabled="" class="custom-control-input" ref="input" type="radio">
    <span class="custom-control-indicator"></span>
    <span class="custom-control-description">My Radio</span>
  </label>
</div>
`;

exports[`ClayRadio should generate a radio with custom classes 1`] = `
<div class="form-check my-custom-class">
  <label class="custom-control custom-radio my-custom-class">
    <input class="custom-control-input" ref="input" type="radio">
    <span class="custom-control-indicator"></span>
    <span class="custom-control-description">My Radio</span>
  </label>
</div>
`;

exports[`ClayRadio should generate a radio with custom id 1`] = `
<div class="form-check" id="myRadio">
  <label class="custom-control custom-radio" id="myRadio">
    <input class="custom-control-input" ref="input" type="radio">
    <span class="custom-control-indicator"></span>
    <span class="custom-control-description">My Radio</span>
  </label>
</div>
`;

exports[`ClayRadio should generate a radio with hidden label 1`] = `
<div class="form-check">
  <label class="custom-control custom-radio">
    <input class="custom-control-input" ref="input" type="radio">
    <span class="custom-control-indicator"></span>
    <span class="custom-control-description sr-only">My Radio</span>
  </label>
</div>
`;

exports[`ClayRadio should generate a radio with name 1`] = `
<div class="form-check">
  <label class="custom-control custom-radio">
    <input class="custom-control-input" name="myradio" ref="input" type="radio">
    <span class="custom-control-indicator"></span>
    <span class="custom-control-description">My Radio</span>
  </label>
</div>
`;

exports[`ClayRadio should generate a radio with value 1`] = `
<div class="form-check">
  <label class="custom-control custom-radio">
    <input class="custom-control-input" value="myradio" ref="input" type="radio">
    <span class="custom-control-indicator"></span>
    <span class="custom-control-description">My Radio</span>
  </label>
</div>
`;

exports[`ClayRadio should generate an inline radio 1`] = `
<label class="custom-control custom-radio">
  <input class="custom-control-input" ref="input" type="radio">
  <span class="custom-control-indicator"></span>
  <span class="custom-control-description">My Radio</span>
</label>
`;

exports[`ClayRadio should generate an inline radio with classes 1`] = `
<label class="custom-control custom-radio my-custom-class">
  <input class="custom-control-input" ref="input" type="radio">
  <span class="custom-control-indicator"></span>
  <span class="custom-control-description">My Radio</span>
</label>
`;

exports[`ClayRadio should generate an inline radio with custom id 1`] = `
<label class="custom-control custom-radio" id="myRadio">
  <input class="custom-control-input" ref="input" type="radio">
  <span class="custom-control-indicator"></span>
  <span class="custom-control-description">My Radio</span>
</label>
`;

exports[`ClayRadio should generate default markup 1`] = `
<div class="form-check">
  <label class="custom-control custom-radio">
    <input class="custom-control-input" ref="input" type="radio">
    <span class="custom-control-indicator"></span>
    <span class="custom-control-description">My Radio</span>
  </label>
</div>
`;
